--- a/index.html
+++ b/index.html
@@ -70,125 +70,149 @@
       </div>
     </div>
     <br>
-    <p class="text-xs px-2 relative top-[22rem]">Popular Item in the market</p>
-    <p class="text-3xl px-2 bold underline relative top-[22rem]">Trending Market</p>
+    <p id="second-items-header-1" class="text-md px-2">Popular Item in the market</p>
+    <p id="second-items-header-2" class="text-4xl px-2 bold underline">Trending Market</p>
     <br>
-    <div id="second-items"class="top-[22rem] relative">
-      <div id="on-hover" class="bg-orange-300 border-solid h-[21rem] border-black absolute w-[100%]"> asssxa</div>
-      <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[100%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
-        <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
-          <span class="text-lg font-bold text-white">Wired Something</span>
-          <p class="italic text-sm text-white">amska</p>
+    <div id="second-items" class="w-[100%] h-[110rem] grid grid-cols-[50%_50%] p-2 absolute pr-8 gap-4">
+      <div class="">
+        <div id="on-hover" class="bg-orange-300 border-solid rounded-md h-[21rem] border-black absolute w-[48%]"> asssxa</div>
+        <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[48%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
+          <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
+            <span class="text-lg font-bold text-white">Wired Something</span>
+            <p class="italic text-sm text-white">amska</p>
+          </div>
+        </div>
+        <div class="w-[100%] grid place-items-center relative top-[22rem]">
+          <p class="text-sm">Accessories</p>
+          <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+          <p class="text-gray-600">$150.00</p>
         </div>
       </div>
-      <div class="w-[100%] grid place-items-center top-[22rem] relative">
-        <p class="text-sm">Accessories</p>
-        <p class="text-xl font-bold">Quartz Belt Watch</p>
-        <p class="text-gray-600">$150.00</p>
-      </div>
-    </div>
-    <br>
-    <div id="second-items"class="top-[45rem] relative">
-      <div id="on-hover" class="bg-lime-300 border-solid h-[21rem] border-black absolute w-[100%]"> asssxa</div>
-      <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[100%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
-        <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
-          <span class="text-lg font-bold text-white">Wired Something</span>
-          <p class="italic text-sm text-white">amska</p>
+      <div class="">
+        <div id="on-hover" class="bg-lime-300 border-solid h-[21rem] rounded-md border-black absolute w-[48%]"> asssxa</div>
+        <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[48%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
+          <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
+            <span class="text-lg font-bold text-white">Wired Something</span>
+            <p class="italic text-sm text-white">amska</p>
+          </div>
+        </div>
+        <div class="w-[100%] grid place-items-center relative top-[22rem]">
+          <p class="text-sm">Accessories</p>
+          <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+          <p class="text-gray-600">$150.00</p>
         </div>
       </div>
-      <div class="w-[100%] grid place-items-center top-[22rem] relative">
-        <p class="text-sm">Accessories</p>
-        <p class="text-xl font-bold">Quartz Belt Watch</p>
-        <p class="text-gray-600">$150.00</p>
-      </div>
-    </div>
-      <br>
-    <div id="second-items"class="top-[67rem] relative">
-      <div id="on-hover" class="bg-purple-300 border-solid h-[21rem] border-black absolute w-[100%]"> asssxa</div>
-      <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[100%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
-        <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
-          <span class="text-lg font-bold text-white">Wired Something</span>
-          <p class="italic text-sm text-white">amska</p>
+      <div class="">
+        <div id="on-hover" class="bg-purple-300 border-solid h-[21rem] rounded-md border-black absolute w-[48%]"> asssxa</div>
+        <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[48%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
+          <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
+            <span class="text-lg font-bold text-white">Wired Something</span>
+            <p class="italic text-sm text-white">amska</p>
+          </div>
+        </div>
+        <div class="w-[100%] grid place-items-center relative top-[22rem]">
+          <p class="text-sm">Accessories</p>
+          <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+          <p class="text-gray-600">$150.00</p>
         </div>
       </div>
-      <div class="w-[100%] grid place-items-center top-[22rem] relative">
-        <p class="text-sm">Accessories</p>
-        <p class="text-xl font-bold">Quartz Belt Watch</p>
-        <p class="text-gray-600">$150.00</p>
-      </div>
-      <br>
-    </div>
-    <div id="second-items"class="top-[89rem] relative">
-      <div id="on-hover" class="bg-red-200 border-solid h-[21rem] border-black absolute w-[100%]"> asssxa</div>
-      <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[100%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
-        <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
-          <span class="text-lg font-bold text-white">Wired Something</span>
-          <p class="italic text-sm text-white">amska</p>
+      <div class="">
+        <div id="on-hover" class="bg-red-200 border-solid h-[21rem] border-black rounded-md absolute w-[48%]"> asssxa</div>
+        <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[48%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
+          <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
+            <span class="text-lg font-bold text-white">Wired Something</span>
+            <p class="italic text-sm text-white">amska</p>
+          </div>
+        </div>
+        <div class="w-[100%] grid place-items-center relative top-[22rem]">
+          <p class="text-sm">Accessories</p>
+          <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+          <p class="text-gray-600">$150.00</p>
         </div>
       </div>
-      <div class="w-[100%] grid place-items-center top-[22rem] relative">
-        <p class="text-sm">Accessories</p>
-        <p class="text-xl font-bold">Quartz Belt Watch</p>
-        <p class="text-gray-600">$150.00</p>
-      </div>
-    </div>
-    <div id="second-items"class="top-[113rem] relative">
-      <div id="on-hover" class="bg-orange-300 border-solid h-[21rem] border-black absolute w-[100%]"> asssxa</div>
-      <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[100%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
-        <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
-          <span class="text-lg font-bold text-white">Wired Something</span>
-          <p class="italic text-sm text-white">amska</p>
+      <div class="">
+        <div id="on-hover" class="bg-orange-300 border-solid h-[21rem] rounded-md border-black absolute w-[48%]"> asssxa</div>
+        <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[48%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
+          <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
+            <span class="text-lg font-bold text-white">Wired Something</span>
+            <p class="italic text-sm text-white">amska</p>
+          </div>
+        </div>
+        <div class="w-[100%] grid place-items-center relative top-[22rem]">
+          <p class="text-sm">Accessories</p>
+          <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+          <p class="text-gray-600">$150.00</p>
         </div>
       </div>
-      <div class="w-[100%] grid place-items-center top-[22rem] relative">
-        <p class="text-sm">Accessories</p>
-        <p class="text-xl font-bold">Quartz Belt Watch</p>
-        <p class="text-gray-600">$150.00</p>
-      </div>
-    </div>
-    <br>
-    <div id="second-items"class="top-[135rem] relative">
-      <div id="on-hover" class="bg-lime-300 border-solid h-[21rem] border-black absolute w-[100%]"> asssxa</div>
-      <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[100%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
-        <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
-          <span class="text-lg font-bold text-white">Wired Something</span>
-          <p class="italic text-sm text-white">amska</p>
+      <div class="">
+        <div id="on-hover" class="bg-lime-300 border-solid h-[21rem] border-black rounded-md absolute w-[48%]"> asssxa</div>
+        <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[48%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
+          <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
+            <span class="text-lg font-bold text-white">Wired Something</span>
+            <p class="italic text-sm text-white">amska</p>
+          </div>
+        </div>
+        <div class="w-[100%] grid place-items-center relative top-[22rem]">
+          <p class="text-sm">Accessories</p>
+          <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+          <p class="text-gray-600">$150.00</p>
         </div>
       </div>
-      <div class="w-[100%] grid place-items-center top-[22rem] relative">
-        <p class="text-sm">Accessories</p>
-        <p class="text-xl font-bold">Quartz Belt Watch</p>
-        <p class="text-gray-600">$150.00</p>
-      </div>
-    </div>
-      <br>
-    <div id="second-items"class="top-[157rem] relative">
-      <div id="on-hover" class="bg-purple-300 border-solid h-[21rem] border-black absolute w-[100%]"> asssxa</div>
-      <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[100%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
-        <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
-          <span class="text-lg font-bold text-white">Wired Something</span>
-          <p class="italic text-sm text-white">amska</p>
+      <div class="">
+        <div id="on-hover" class="bg-purple-300 border-solid h-[21rem] border-black rounded-md absolute w-[48%]"> asssxa</div>
+        <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[48%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
+          <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
+            <span class="text-lg font-bold text-white">Wired Something</span>
+            <p class="italic text-sm text-white">amska</p>
+          </div>
+        </div>
+        <div class="w-[100%] grid place-items-center relative top-[22rem]">
+          <p class="text-sm">Accessories</p>
+          <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+          <p class="text-gray-600">$150.00</p>
         </div>
       </div>
-      <div class="w-[100%] grid place-items-center top-[22rem] relative">
-        <p class="text-sm">Accessories</p>
-        <p class="text-xl font-bold">Quartz Belt Watch</p>
-        <p class="text-gray-600">$150.00</p>
-      </div>
-      <br>
-    </div>
-    <div id="second-items"class="top-[180rem] relative">
-      <div id="on-hover" class="bg-red-200 border-solid h-[21rem] border-black absolute w-[100%]"> asssxa</div>
-      <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[100%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
-        <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
-          <span class="text-lg font-bold text-white">Wired Something</span>
-          <p class="italic text-sm text-white">amska</p>
+      <div class="">
+        <div id="on-hover" class="bg-red-200 border-solid h-[21rem] border-black rounded-md absolute w-[48%]"> asssxa</div>
+        <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[48%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
+          <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
+            <span class="text-lg font-bold text-white">Wired Something</span>
+            <p class="italic text-sm text-white">amska</p>
+          </div>
+        </div>
+        <div class="w-[100%] grid place-items-center relative top-[22rem]">
+          <p class="text-sm">Accessories</p>
+          <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+          <p class="text-gray-600">$150.00</p>
         </div>
       </div>
-      <div class="w-[100%] grid place-items-center top-[22rem] relative">
-        <p class="text-sm">Accessories</p>
-        <p class="text-xl font-bold">Quartz Belt Watch</p>
-        <p class="text-gray-600">$150.00</p>
+      <div class="">
+        <div id="on-hover" class="bg-lime-200 border-solid h-[21rem] border-black rounded-md absolute w-[48%]"> asssxa</div>
+        <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[48%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
+          <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
+            <span class="text-lg font-bold text-white">Wired Something</span>
+            <p class="italic text-sm text-white">amska</p>
+          </div>
+        </div>
+        <div class="w-[100%] grid place-items-center relative top-[22rem]">
+          <p class="text-sm">Accessories</p>
+          <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+          <p class="text-gray-600">$150.00</p>
+        </div>
+      </div>
+      <div class="">
+        <div id="on-hover" class="bg-yellow-200 border-solid h-[21rem] border-black rounded-md absolute w-[48%]"> asssxa</div>
+        <div class="border-solid h-[21rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[48%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
+          <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
+            <span class="text-lg font-bold text-white">Wired Something</span>
+            <p class="italic text-sm text-white">amska</p>
+          </div>
+        </div>
+        <div class="w-[100%] grid place-items-center relative top-[22rem]">
+          <p class="text-sm">Accessories</p>
+          <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+          <p class="text-gray-600">$150.00</p>
+        </div>
       </div>
     </div>  
   </div>
