--- a/index.html
+++ b/index.html
@@ -205,46 +205,61 @@
       <!-- Carousel wrapper -->
       <div class="relative h-[100%] overflow-hidden m-3">
         <!-- Item 1 -->
-        <div id="carousel-item" class="hidden h-[70%] duration-300 ease-in-out rounded-lg bg-yellow-100" data-carousel-item="active">
+        <div id="carousel-item" class="group hidden h-[70%] duration-300 ease-in-out rounded-lg bg-yellow-100" data-carousel-item="active">
+          <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
+            <span class="border-solid border-2 border-black p-2">&#8750;</span>
+            <span class="border-solid border-2 border-black p-2">&#8751;</span>
+            <span class="border-solid border-2 border-black p-2">&#8752;</span>
+          </div>
           <div class="grid relative w-[100%] place-items-center top-[30rem] -translate-x-1/2 -translate-y-1/2 left-1/2">
             <p class="text-sm text-gray-400">Accessories</p>
-              <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
-              <p class="text-gray-600">$150.00</p>
+            <p class="text-xl font-bold group-hover:text-blue-700">Quartz Belt Watch</p>
+            <p class="text-gray-600">$150.00</p>
           </div>
         </div>
         <!-- Item 2 -->
-        <div id="carousel-item" class="hidden h-[70%] duration-300 bg-green-500 ease-in-out" data-carousel-item>
-            <div class="flex relative m-auto h-[10rem] w-[100%] border-2 border-black place-items-center">
-              <span>&#8750;</span>
-              <span>&#8751;</span>
-              <span>&#8752;</span>
-            </div>
-            <div class="grid relative w-[100%] place-items-center top-[30rem] -translate-x-1/2 -translate-y-1/2 left-1/2" alt="...">
-              <p class="text-sm text-gray-400">Accessories</p>
-                <p class="text-xl font-bold hover:text-blue-700">Qasmlak</p>
-                <p class="text-gray-600">$150.00</p>
-            </div>
+        <div id="carousel-item" class="group hidden h-[70%] duration-300 bg-green-500 ease-in-out" data-carousel-item>
+          <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
+            <span class="border-solid border-2 border-black p-2">&#8750;</span>
+            <span class="border-solid border-2 border-black p-2">&#8751;</span>
+            <span class="border-solid border-2 border-black p-2">&#8752;</span>
+          </div>
+          <div class="grid relative w-[100%] place-items-center top-[30rem] -translate-x-1/2 -translate-y-1/2 left-1/2" alt="...">
+            <p class="text-sm text-gray-400">Accessories</p>
+            <p class="text-xl font-bold group-hover:text-blue-700">Qasmlak</p>
+            <p class="text-gray-600">$150.00</p>
+          </div>
         </div>
         <!-- Item 3 -->
-        <div id="carousel-item" class="hidden h-[70%] duration-300 bg-blue-200 ease-in-out" data-carousel-item>
+        <div id="carousel-item" class="group hidden h-[70%] duration-300 bg-blue-200 ease-in-out" data-carousel-item>
+          <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
+            <span class="border-solid border-2 border-black p-2">&#8750;</span>
+            <span class="border-solid border-2 border-black p-2">&#8751;</span>
+            <span class="border-solid border-2 border-black p-2">&#8752;</span>
+          </div>
           <div class="grid relative w-[100%] place-items-center top-[30rem] -translate-x-1/2 -translate-y-1/2 left-1/2" alt="...">
             <p class="text-sm text-gray-400">Accessories</p>
-              <p class="text-xl font-bold hover:text-blue-700">QMlkokajs</p>
-              <p class="text-gray-600">$150.00</p>
+            <p class="text-xl font-bold group-hover:text-blue-700">QMlkokajs</p>
+            <p class="text-gray-600">$150.00</p>
           </div>
         </div>
-        <div id="carousel-item" class="hidden h-[70%] duration-300 bg-red-300 ease-in-out" data-carousel-item>
+        <div id="carousel-item" class="group hidden h-[70%] duration-300 bg-red-300 ease-in-out" data-carousel-item>
+          <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
+            <span class="border-solid border-2 border-black p-2">&#8750;</span>
+            <span class="border-solid border-2 border-black p-2">&#8751;</span>
+            <span class="border-solid border-2 border-black p-2">&#8752;</span>
+          </div>
           <div class="grid relative w-[100%] place-items-center top-[30rem] -translate-x-1/2 -translate-y-1/2 left-1/2" alt="...">
             <p class="text-sm text-gray-400">Accessories</p>
-              <p class="text-xl font-bold hover:text-blue-700">QMlkokajs</p>
-              <p class="text-gray-600">$150.00</p>
+            <p class="text-xl font-bold group-hover:text-blue-700">QMlkokajs</p>
+            <p class="text-gray-600">$150.00</p>
           </div>
         </div>
-        <div class="relative flex w-[100%] top-[90%] h-[3rem] pb-[3rem] place-items-center">
-          <button class="flex m-auto h-[3rem] hover:bg-gray-500 rounded-md bottom-[2rem] hover:text-white w-[2rem] text-4xl p-0 mr-[1rem] cursor-pointer opacity-[2rem] transition-opacity hover:opacity-[3rem] focus:opacity-[3rem] left-0 pl-[0.25rem]" data-carousel-prev>
+        <div class="relative flex justify-center w-[100%] top-[90%] h-[3rem] pb-[3rem] place-items-center">
+          <button class="hover:bg-gray-500 rounded-md hover:text-white text-3xl p-0 cursor-pointer opacity-[2rem] transition-opacity hover:opacity-[3rem] focus:opacity-[3rem]" data-carousel-prev>
             &#8678; <!-- html arrow codes-->
           </button>
-          <button class="flex m-auto h-[3rem] hover:bg-gray-500 rounded-md hover:text-white w-[2rem] text-4xl p-0 ml-[1rem] cursor-pointer opacity-[2rem] transition-opacity hover:opacity-[3rem] focus:opacity-[3rem] right-0 pl-[0.75rem]" data-carousel-next>
+          <button class="hover:bg-gray-500 rounded-md hover:text-white text-3xl p-0 cursor-pointer opacity-[2rem] transition-opacity hover:opacity-[3rem] focus:opacity-[3rem]" data-carousel-next>
             &#8680;
           </button>
         </div>
