--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
       </div>
     </div>
     <br>
-    <div id="slides-container" class="relative h-[50rem] top-[205rem] w-[100%]" data-carousel="static">
+    <div id="slides-container" class="relative h-[50rem] top-[110rem] w-[100%]" data-carousel="static">
       <!-- Carousel wrapper -->
-      <div class="relative h-[100%] overflow-hidden m-3">
+      <div class="grid grid-cols-2 h-[100%] overflow-hidden relative gap-x-4 m-4">
         <!-- Item 1 -->
-        <div id="carousel-item" class="group hidden h-[70%] duration-300 ease-in-out rounded-lg bg-yellow-100" data-carousel-item="active">
+        <div id="carousel-item" class="group hidden w-[50%] h-[70%] place-content-around duration-500 ease-in-out rounded-lg bg-yellow-100" data-carousel-item="active">
           <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
             <span class="border-solid border-2 border-black p-2">&#8750;</span>
             <span class="border-solid border-2 border-black p-2">&#8751;</span>
@@ -231,7 +231,7 @@
           </div>
         </div>
         <!-- Item 2 -->
-        <div id="carousel-item" class="group hidden h-[70%] duration-300 bg-green-500 ease-in-out" data-carousel-item>
+        <div id="carousel-item" class="group hidden w-[50%] h-[70%] place-content-around rounded-lg duration-500 bg-green-500 ease-in-out" data-carousel-item>
           <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
             <span class="border-solid border-2 border-black p-2">&#8750;</span>
             <span class="border-solid border-2 border-black p-2">&#8751;</span>
@@ -244,7 +244,7 @@
           </div>
         </div>
         <!-- Item 3 -->
-        <div id="carousel-item" class="group hidden h-[70%] duration-300 bg-blue-200 ease-in-out" data-carousel-item>
+        <div id="carousel-item" class="group hidden w-[50%] h-[70%] place-content-around rounded-lg duration-500 bg-blue-200 ease-in-out" data-carousel-item>
           <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
             <span class="border-solid border-2 border-black p-2">&#8750;</span>
             <span class="border-solid border-2 border-black p-2">&#8751;</span>
@@ -256,7 +256,7 @@
             <p class="text-gray-600">$150.00</p>
           </div>
         </div>
-        <div id="carousel-item" class="group hidden h-[70%] duration-300 bg-red-300 ease-in-out" data-carousel-item>
+        <div id="carousel-item" class="group hidden w-[50%] h-[70%] place-content-around rounded-lg duration-500 bg-red-300 ease-in-out" data-carousel-item>
           <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
             <span class="border-solid border-2 border-black p-2">&#8750;</span>
             <span class="border-solid border-2 border-black p-2">&#8751;</span>
@@ -268,14 +268,14 @@
             <p class="text-gray-600">$150.00</p>
           </div>
         </div>
-        <div class="relative flex justify-center w-[100%] top-[90%] h-[3rem] pb-[3rem] place-items-center">
-          <button class="hover:bg-gray-500 rounded-md hover:text-white text-3xl p-0 cursor-pointer opacity-[2rem] transition-opacity hover:opacity-[3rem] focus:opacity-[3rem]" data-carousel-prev>
-            &#8678; <!-- html arrow codes-->
-          </button>
-          <button class="hover:bg-gray-500 rounded-md hover:text-white text-3xl p-0 cursor-pointer opacity-[2rem] transition-opacity hover:opacity-[3rem] focus:opacity-[3rem]" data-carousel-next>
-            &#8680;
-          </button>
-        </div>
+      </div>
+      <div class="relative flex justify-center w-[100%] h-[3rem] pb-[3rem] place-items-center">
+        <button class="hover:bg-gray-500 rounded-md hover:text-white text-3xl p-0 cursor-pointer opacity-[2rem] transition-opacity hover:opacity-[3rem] focus:opacity-[3rem]" data-carousel-prev>
+          &#8678; <!-- html arrow codes-->
+        </button>
+        <button class="hover:bg-gray-500 rounded-md hover:text-white text-3xl p-0 cursor-pointer opacity-[2rem] transition-opacity hover:opacity-[3rem] focus:opacity-[3rem]" data-carousel-next>
+          &#8680;
+        </button>
       </div>
   <!-- Slider indicators -->
   <!-- <div class="absolute z-30 flex space-x-3 -translate-x-1/2 bottom-5 left-1/2">
