--- a/index.html
+++ b/index.html
@@ -283,7 +283,49 @@
         <p id="latest-header-3" class="text-3xl py-2 font-extrabold border-solid border-b-2 border-blue-700 relative">News</p>
       </div>
     </div>
-
+    <div id="latest-news">
+      <div class="grid relative top-[205rem] mt-5 p-2 gap-12">
+        <div>
+          <div class="border-solid border-2 border-black h-[20rem] w-[25rem]">picture</div>
+          <div class="flex mt-5 gap-x-6 text-sm text-gray-600">
+            <span>By Admin</span>
+            <span>&#9787 2 Comments</span>
+          </div>
+          <span class="font-bold hover:text-blue-600 flex mt-5">No Such Thing As A Life That's Better Than Yours</span>
+          <span class="text-gray-600 flex mt-5">When I met her she was out for love, I bought her leather and some diamond studs..</span>
+          <div class="flex gap-x-2 font-bold mt-5 hover:text-blue-600 hover:gap-x-4">
+            <span>Read More</span>
+            <span>&#8594;</span>
+          </div>
+        </div>
+        <div>
+          <div class="border-solid border-2 border-black h-[20rem] w-[25rem]">picture</div>
+          <div class="flex mt-5 gap-x-6 text-sm text-gray-600">
+            <span>By Admin</span>
+            <span>&#9787 2 Comments</span>
+          </div>
+          <span class="font-bold hover:text-blue-600 flex mt-5">No Church In The Wild</span>
+          <span class="text-gray-600 flex mt-5">You can't stop it, music still playing in the background...</span>
+          <div class="flex gap-x-2 font-bold mt-5 hover:text-blue-600 hover:gap-x-4">
+            <span>Read More</span>
+            <span>&#8594;</span>
+          </div>
+        </div>
+        <div>
+          <div class="border-solid border-2 border-black h-[20rem] w-[25rem]">picture</div>
+          <div class="flex mt-5 gap-x-6 text-sm text-gray-600">
+            <span>By Admin</span>
+            <span>&#9787 2 Comments</span>
+          </div>
+          <span class="font-bold hover:text-blue-600 flex mt-5">It Won't Stop</span>
+          <span class="text-gray-600 flex mt-5">All I want is you, So what you trying to do...</span>
+          <div class="flex gap-x-2 font-bold mt-5 hover:text-blue-600 hover:gap-x-4">
+            <span>Read More</span>
+            <span>&#8594;</span>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <script src="https://unpkg.com/flowbite@1.5.4/dist/flowbite.js"></script>
   <script src="../path/to/flowbite/dist/flowbite.js"></script>
