--- a/index.html
+++ b/index.html
@@ -283,8 +283,7 @@
         <p id="latest-header-3" class="text-3xl py-2 font-extrabold border-solid border-b-2 border-blue-700 relative">News</p>
       </div>
     </div>
-    <div id="latest-news">
-      <div class="grid relative top-[205rem] mt-5 p-2 gap-12">
+    <div id="latest-news" class="grid relative top-[205rem] mt-5 p-2 gap-12">
         <div>
           <div class="border-solid border-2 border-black h-[20rem] w-[25rem]">picture</div>
           <div class="flex mt-5 gap-x-6 text-sm text-gray-600">
@@ -324,7 +323,6 @@
             <span>&#8594;</span>
           </div>
         </div>
-      </div>
     </div>
   </div>
   <script src="https://unpkg.com/flowbite@1.5.4/dist/flowbite.js"></script>
